--- a/index.html
+++ b/index.html
@@ -16,15 +16,11 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/OpenPassword/OpenPassword">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/OpenPassword">View on GitHub</a>
 
           <h1 id="project_title">Openpassword</h1>
           <h2 id="project_tagline"></h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/OpenPassword/OpenPassword/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/OpenPassword/OpenPassword/tarball/master">Download this project as a tar.gz file</a>
-            </section>
         </header>
     </div>
 
@@ -32,43 +28,49 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="whats-openpassword" class="anchor" href="#whats-openpassword"><span class="octicon octicon-link"></span></a>What's OpenPassword?</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Openpassword is a python API to access an Agilekeychain.</p>
 
 <h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a name="can-i-see-some-api-examples" class="anchor" href="#can-i-see-some-api-examples"><span class="octicon octicon-link"></span></a>Can I see some API examples?</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>Currently OpenPassword is in early development stage, and most of the API is yet to implement. Here are some examples of the few implemented bits:</p>
+
+<h4>
+<a name="unlocking-the-keychain" class="anchor" href="#unlocking-the-keychain"><span class="octicon octicon-link"></span></a>Unlocking the keychain</h4>
+
+<div class="highlight highlight-python"><pre><span class="kn">from</span> <span class="nn">openpassword</span> <span class="kn">import</span> <span class="n">Keychain</span>
+<span class="kn">from</span> <span class="nn">openpassword</span> <span class="kn">import</span> <span class="n">EncryptionKeyFactory</span>
+
+<span class="n">keychain</span> <span class="o">=</span> <span class="n">Keychain</span><span class="p">(</span><span class="n">EncryptionKeyFactory</span><span class="p">(</span><span class="n">keys</span><span class="p">)</span><span class="o">.</span><span class="n">key_for_security_level</span><span class="p">(</span><span class="s">"SL5"</span><span class="p">))</span>
+<span class="n">keychain</span><span class="o">.</span><span class="n">unlock</span><span class="p">()</span>
+
+</pre></div>
+
+<h4>
+<a name="decrypting-an-encryption-key" class="anchor" href="#decrypting-an-encryption-key"><span class="octicon octicon-link"></span></a>Decrypting an encryption key</h4>
+
+<div class="highlight highlight-python"><pre><span class="kn">from</span> <span class="nn">openpassword</span> <span class="kn">import</span> <span class="n">EncryptionKey</span>
+
+<span class="n">encryption_key</span> <span class="o">=</span> <span class="n">EncryptionKeyFactory</span><span class="p">(</span><span class="n">keys</span><span class="p">)</span><span class="o">.</span><span class="n">key_for_security_level</span><span class="p">(</span><span class="s">"SL5"</span><span class="p">)</span>
+<span class="n">decrypted_key</span> <span class="o">=</span> <span class="n">encryption_key</span><span class="o">.</span><span class="n">decrypt</span><span class="p">(</span><span class="s">'masterpassword123'</span><span class="p">)</span>
+</pre></div>
+
+<p>The <code>keys</code> parameter passed to the EncryptionKeyFactory is a dictionary similar to the one found in the <a href="https://github.com/OpenPassword/OpenPassword/blob/develop/spec/openpassword/encryption_key_factory_spec.py#L7">EncryptionKeyFactorySpec</a> file.</p>
 
 <h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<a name="contributing" class="anchor" href="#contributing"><span class="octicon octicon-link"></span></a>Contributing</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>First check the "<a href="/OpenPassword/OpenPassword/blob/develop/CONTRIBUTING.md#contributing">How to contribute</a>" page.</p>
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Then, <a href="https://github.com/OpenPassword/OpenPassword/fork">fork the repository</a>, create your feature and make a pull request.</p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Openpassword maintained by <a href="https://github.com/OpenPassword">OpenPassword</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
